Bug 303524 - Control Center Crash
Summary: Control Center Crash
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
: 306359 306462 306463 309207 313648 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-07-14 14:17 UTC by Suzanna
Modified: 2013-01-21 21:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Suzanna 2012-07-14 14:17:58 UTC
Application: kcmshell4 ()
KDE Platform Version: 4.8.90 (4.8.90)
Qt Version: 4.8.1
Operating System: Linux 3.5.0-4-generic x86_64
Distribution: Ubuntu 12.04 LTS

-- Information about the crash:
- What I was doing when the application crashed:
I had just finished tweaking my network connection.  Am having spotty connection and really slow responses. So I was checking connection settings and comparing them to my modem/gateway settings to see if I could change anything.  Clicked to close the network connection window and Control Center crashed.

-- Backtrace:
Application: KDE Control Module (kdeinit4), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fac91a94780 (LWP 8155))]

Thread 2 (Thread 0x7fac7b15e700 (LWP 8158)):
#0  0x00007fac96a72b03 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fac93b89036 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fac93b89164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fac97ec1426 in QEventDispatcherGlib::processEvents (this=0x7fac740008f0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fac97e90c82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fac97e90ed7 in QEventLoop::exec (this=0x7fac7b15dd10, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fac97d8ffa7 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fac97e709ff in QInotifyFileSystemWatcherEngine::run (this=0x8de270) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fac97d92fcb in QThreadPrivate::start (arg=0x8de270) at thread/qthread_unix.cpp:298
#9  0x00007fac871f36c4 in ?? () from /usr/lib/nvidia-current/libGL.so.1
#10 0x00007fac9445fe9a in start_thread (arg=0x7fac7b15e700) at pthread_create.c:308
#11 0x00007fac96a7e4bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fac91a94780 (LWP 8155)):
[KCrash Handler]
#6  0x00007fac7c8b6126 in SecretStorage::switchStorage(SecretStorage::SecretStorageMode, SecretStorage::SecretStorageMode) () from /usr/lib/libknmservice.so.4
#7  0x00007fac7b52ec90 in ?? () from /usr/lib/kde4/kcm_networkmanagement_tray.so
#8  0x00007fac88f57997 in KCModuleProxy::save (this=<optimized out>) at ../../kutils/kcmoduleproxy.cpp:279
#9  0x00007fac88f54890 in KCMultiDialogPrivate::apply (this=<optimized out>) at ../../kutils/kcmultidialog.cpp:300
#10 0x00007fac97ea6281 in QMetaObject::activate (sender=0x9324b0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#11 0x00007fac98b8304e in KDialog::slotButtonClicked (this=0x9324b0, button=8) at ../../kdeui/dialogs/kdialog.cpp:888
#12 0x00007fac98b83594 in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at ./kdialog.moc:167
#13 KDialog::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at ./kdialog.moc:127
#14 0x00007fac97ea6281 in QMetaObject::activate (sender=0x932e20, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff652f1dd0) at kernel/qobject.cpp:3547
#15 0x00007fac97eadb3e in QSignalMapper::mapped (this=<optimized out>, _t1=8) at .moc/release-shared/moc_qsignalmapper.cpp:115
#16 0x00007fac97eae0db in QSignalMapper::map (this=0x932e20, sender=0x97c690) at kernel/qsignalmapper.cpp:266
#17 0x00007fac97ea6281 in QMetaObject::activate (sender=0x97c690, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff652f1f60) at kernel/qobject.cpp:3547
#18 0x00007fac978a4c72 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:220
#19 0x00007fac975e2a4e in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:548
#20 0x00007fac975e3d8b in QAbstractButtonPrivate::click (this=0x989b00) at widgets/qabstractbutton.cpp:541
#21 0x00007fac975e3ffc in QAbstractButton::mouseReleaseEvent (this=0x97c690, e=0x7fff652f2830) at widgets/qabstractbutton.cpp:1123
#22 0x00007fac97265144 in QWidget::event (this=0x97c690, event=0x7fff652f2830) at kernel/qwidget.cpp:8362
#23 0x00007fac97214894 in notify_helper (e=0x7fff652f2830, receiver=0x97c690, this=0x771a30) at kernel/qapplication.cpp:4559
#24 QApplicationPrivate::notify_helper (this=0x771a30, receiver=0x97c690, e=0x7fff652f2830) at kernel/qapplication.cpp:4531
#25 0x00007fac9721a0bf in QApplication::notify (this=<optimized out>, receiver=0x97c690, e=0x7fff652f2830) at kernel/qapplication.cpp:4102
#26 0x00007fac98c2d9e6 in KApplication::notify (this=0x7fff652f3550, receiver=0x97c690, event=0x7fff652f2830) at ../../kdeui/kernel/kapplication.cpp:311
#27 0x00007fac97e91e9c in QCoreApplication::notifyInternal (this=0x7fff652f3550, receiver=0x97c690, event=0x7fff652f2830) at kernel/qcoreapplication.cpp:876
#28 0x00007fac97215862 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#29 QApplicationPrivate::sendMouseEvent (receiver=0x97c690, event=0x7fff652f2830, alienWidget=0x97c690, nativeWidget=0x9325b0, buttonDown=0x97c690, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3170
#30 0x00007fac97294bf5 in QETWidget::translateMouseEvent (this=0x9325b0, event=<optimized out>) at kernel/qapplication_x11.cpp:4617
#31 0x00007fac97293bae in QApplication::x11ProcessEvent (this=0x7fff652f3550, event=0x7fff652f3100) at kernel/qapplication_x11.cpp:3732
#32 0x00007fac972bd0d2 in x11EventSourceDispatch (s=0x774400, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#33 0x00007fac93b88d53 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007fac93b890a0 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007fac93b89164 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007fac97ec13bf in QEventDispatcherGlib::processEvents (this=0x6487d0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#37 0x00007fac972bcd5e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00007fac97e90c82 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#39 0x00007fac97e90ed7 in QEventLoop::exec (this=0x7fff652f34a0, flags=...) at kernel/qeventloop.cpp:204
#40 0x00007fac976e4936 in QDialog::exec (this=0x9324b0) at dialogs/qdialog.cpp:554
#41 0x00007fac82a7dd2c in kdemain (_argc=<optimized out>, _argv=<optimized out>) at ../../kcmshell/main.cpp:292
#42 0x00000000004086a4 in launch (argc=5, _name=0x71dd58 "kcmshell4", args=<optimized out>, cwd=0x0, envc=<optimized out>, envs=<optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x40b31e "0") at ../../kinit/kinit.cpp:746
#43 0x0000000000409a16 in handle_launcher_request (sock=8, who=<optimized out>) at ../../kinit/kinit.cpp:1238
#44 0x0000000000409f47 in handle_requests (waitForPid=0) at ../../kinit/kinit.cpp:1431
#45 0x000000000040532f in main (argc=4, argv=0x7fff00000001, envp=0x7fff652f4f50) at ../../kinit/kinit.cpp:1919

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2012-07-14 16:44:52 UTC
Please enable all debug messages using kdebugdialog command, reproduce the problem and send me your ~/.xsession-errors file.
Comment 2 Lamarque V. Souza 2012-09-06 17:17:27 UTC
*** Bug 306359 has been marked as a duplicate of this bug. ***
Comment 3 Lamarque V. Souza 2012-09-08 20:32:31 UTC
*** Bug 306463 has been marked as a duplicate of this bug. ***
Comment 4 Lamarque V. Souza 2012-09-08 21:25:01 UTC
Git commit 89803dc6d121408fbbd06103bf0e5584b02fd1b0 by Lamarque V. Souza.
Committed on 08/09/2012 at 23:24.
Pushed by lvsouza into branch 'master'.

Test if wallet has been sucessfully opened before using it.
FIXED-IN: 0.9.0.5

M  +1    -0    backends/NetworkManager/nmdbussecretagent.cpp
M  +34   -5    libs/service/secretstorage.cpp
M  +2    -1    libs/service/secretstorage.h
M  +5    -1    settings/config/managetraywidget.cpp

http://commits.kde.org/networkmanagement/89803dc6d121408fbbd06103bf0e5584b02fd1b0
Comment 5 Lamarque V. Souza 2012-09-08 21:28:32 UTC
Git commit d2b0b7b8bce8c14424dcb612a2a74e3bff90f370 by Lamarque V. Souza.
Committed on 08/09/2012 at 23:24.
Pushed by lvsouza into branch 'nm09'.

Test if wallet has been sucessfully opened before using it.
FIXED-IN: 0.9.0.5
(cherry picked from commit 89803dc6d121408fbbd06103bf0e5584b02fd1b0)

M  +1    -0    backends/NetworkManager/nmdbussecretagent.cpp
M  +34   -5    libs/service/secretstorage.cpp
M  +2    -1    libs/service/secretstorage.h
M  +1    -1    plasma_nm_version.h
M  +5    -1    settings/config/managetraywidget.cpp

http://commits.kde.org/networkmanagement/d2b0b7b8bce8c14424dcb612a2a74e3bff90f370
Comment 6 Lamarque V. Souza 2012-09-09 17:41:41 UTC
*** Bug 306462 has been marked as a duplicate of this bug. ***
Comment 7 Jekyll Wu 2012-10-29 21:58:03 UTC
*** Bug 309207 has been marked as a duplicate of this bug. ***
Comment 8 Lamarque V. Souza 2013-01-21 21:13:10 UTC
*** Bug 313648 has been marked as a duplicate of this bug. ***