Test if wallet has been sucessfully opened before using it.

BUG: 303524
FIXED-IN: 0.9.0.5
(cherry picked from commit 89803dc6d121408fbbd06103bf0e5584b02fd1b0)