plasma_nm_version.h
@@ -1,4 +1,4 @@
 #ifndef PLASMA_NM_VERSION_H
 #define PLASMA_NM_VERSION_H
-static const char * plasmaNmVersion = "0.9.0.4 (nm09 20120902)";
+static const char * plasmaNmVersion = "0.9.0.4 (nm09 20120908)";
 #endif
